--- a/CustomerApp/app/build.gradle
+++ b/CustomerApp/app/build.gradle
@@ -28,4 +28,6 @@ dependencies {
     compile 'com.google.http-client:google-http-client-android:+'
     compile 'com.google.api-client:google-api-client-android:+'
     compile 'com.google.api-client:google-api-client-gson:+'
-    compile 'com.google.code.gson:gson:2.2.4'}
+    compile 'com.google.code.gson:gson:2.2.4'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.0.1'
+    }
